<resources>
    <string name="app_name">Puzzles Javi</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="token">Token</string>

    <!-- Strings relacionados con el Registro Activity-->

    <string name="username_reg">Username</string>
    <string name="password_reg">Password</string>
    <string name="email_reg">Email</string>
    <string name="full_name_reg">Nombre Completo</string>>
    <string name="send_reg">Enviar</string>
    <string name="go_login">¿Ya tienes cuenta? Inicia sesión aquí</string>

    <string name="usernameNotLogin">Username</string>
    <string name="password">Password</string>


    <string name="PsswrdNotLogin">Password</string>
    <string name="usernameRegistro">Username</string>
    <string name="passwordRegistro">Password</string>
    <string name="emailRegistro">Email</string>
    <string name="nombreCompletoRegistro">Nombre Completo</string>
    <string name="enviarRegistro">Enviar</string>
    <string name="goLogin">¿Ya tienes cuenta? Inicia sesión aquí</string>


    <!-- Detalles Puzzle -->
    <string name="tituloDetalle">Nombre Artículo</string>
    <string name="precioDetalle">precio €</string>
    <string name="categoriaDetalle">Categoria</string>
    <string name="descripcionDetalle">Descripción</string>
    <string name="numeroPiezasDetalle">Número de Piezas</string>

    <!-- Perfil -->
    <string name="nombre">Javier García-Galera</string>
    <string name="username">javGarGal</string>
    <string name="email">javi@email.com</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categoriaFiltro">Categoría</string>
    <string name="BuscadorFiltro">Buscador de Puzzles</string>
    <string name="editCategoriaFiltro">todas</string>
    <string name="title_activity_usuario">UsuarioActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="titulo">Nombre Puzzle</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="numPiezas">Num Piezas</string>
    <string name="categoria">Categoría</string>
    <string name="btnGuardar">Guardar</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_detalle_puzzle">DetallePuzzleActivity</string>
    <string name="title_activity_detalle_puzzle_deseado">DetallePuzzleDeseadoActivity</string>
    <string name="title_activity_editar_usuario">EditarUsuarioActivity</string>
    <string name="title_activity_pago">PagoActivity</string>
    <string name="title_activity_respuesta_pago">RespuestaPagoActivity</string>
    <string name="Boton_editar_perfil">EDITAR</string>
    <string name="usuario_titulo_historial">Historial de Pedidos</string>
    <string name="usuario_fecha_pedido">Fecha pedido</string>
    <string name="usuario_subtotal">Subtotal</string>
    <string name="precio_puzzle">Precio €</string>
    <string name="nombre_puzzle">Nombre Puzzle</string>
    <string name="Categoria_puzzle">Categoría</string>
    <string name="textView_subtotal">Subtotal: 100.00€</string>
    <string name="Buscar_filtro">Buscar</string>
    <string name="title_house">home</string>
    <string name="title_deseado">ListaDeseados</string>
    <string name="title_pedidos">pedidos</string>
    <string name="title_house_admin">Admin Home</string>
    <string name="title_usuarios">Usuarios</string>
    <string name="compra">El dinero será abonado en tienda</string>
    <string name="nuevo_puzzle">nuevo_puzzle_admin</string>
    <string name="nuevo_puzzle_admin">Nuevo Puzzle</string>
</resources>