<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_puzzle">

    <fragment
        android:id="@+id/navigation_puzzle"
        android:name="com.naturesecurityvanguard.puzzles_Javi.ui.ListaPuzzles.PuzzleFragment"
        android:label="@string/title_house"
        tools:layout="@layout/fragment_puzzle" />

    <fragment
        android:id="@+id/navigation_deseados"
        android:name="com.naturesecurityvanguard.puzzles_Javi.ui.ListaDeseados.ListaPuzzlesDeseadosFragment"
        android:label="@string/title_deseado"
        tools:layout="@layout/fragment_puzzle_deseado" />

    <fragment
        android:id="@+id/navigation_pedido"
        android:name="com.naturesecurityvanguard.puzzles_Javi.ui.Pedido.PedidoFragment"
        android:label="@string/title_pedidos"
        tools:layout="@layout/fragment_pedido" />
</navigation>