<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Usuario.UsuarioActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="356dp"
        android:layout_height="136dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_avatar"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:src="@drawable/ic_profile_user" />

        <LinearLayout
            android:layout_width="195dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nombre" />

            <TextView
                android:id="@+id/textView_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/username" />


            <TextView
                android:id="@+id/textView_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/email" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#43A047"
        android:text="@string/Boton_editar_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView_titulo_historial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/usuario_titulo_historial"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_editar" />

    <LinearLayout
        android:layout_width="243dp"
        android:layout_height="72dp"
        android:layout_gravity="right"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_titulo_historial">

        <TextView
            android:id="@+id/textView_fecha_pedido_tit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/usuario_fecha_pedido" />


        <TextView
            android:id="@+id/textView_subtotal_tit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/usuario_subtotal" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>