<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.registro.RegistroActivity">

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="145dp"
        android:layout_height="110dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_jigsaw" />

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/username_reg"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_logo" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password_reg"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_username"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_username" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_reg"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

    <TextView
        android:id="@+id/text_view_go_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/go_login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/button_registro"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/button_registro"
        app:layout_constraintTop_toBottomOf="@+id/button_registro" />

    <EditText
        android:id="@+id/edit_text_fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/full_name_reg"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_text_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />

    <Button
        android:id="@+id/button_registro"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/send_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_fullname" />

</androidx.constraintlayout.widget.ConstraintLayout>