<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.puzzle.FilterActivity">

    <EditText
        android:id="@+id/edit_categoria_filtro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editCategoriaFiltro"
        app:layout_constraintEnd_toEndOf="@+id/text_view_category_label"
        app:layout_constraintStart_toStartOf="@+id/text_view_category_label"
        app:layout_constraintTop_toBottomOf="@+id/text_view_category_label" />

    <Button
        android:id="@+id/button_filtrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:backgroundTint="#4CAF50"
        android:text="Ver Viviendas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_categoria_filtro" />

    <TextView
        android:id="@+id/text_view_titulo_filtrado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/BuscadorFiltro"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_category_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:text="@string/categoriaFiltro"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/text_view_titulo_filtrado"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_view_titulo_filtrado"
        app:layout_constraintTop_toBottomOf="@+id/text_view_titulo_filtrado" />

</androidx.constraintlayout.widget.ConstraintLayout>