<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/puzzle_admin_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/image_view_foto"
        android:layout_width="181dp"
        android:layout_height="153dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_jigsaw" />

    <TextView
        android:id="@+id/text_view_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/nombre_puzzle"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/image_view_foto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/precio_puzzle"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/image_view_foto"
        app:layout_constraintTop_toBottomOf="@+id/text_view_categoria_admin" />

    <TextView
        android:id="@+id/text_view_categoria_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/Categoria_puzzle"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/image_view_foto"
        app:layout_constraintTop_toBottomOf="@+id/text_view_titulo" />

    <ImageView
        android:id="@+id/image_categoria"
        android:layout_width="36dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_categoria_admin"
        app:layout_constraintStart_toEndOf="@+id/text_view_categoria_admin"
        app:layout_constraintTop_toTopOf="@+id/text_view_categoria_admin"
        tools:srcCompat="@drawable/ic_rompecabezas" />


</androidx.constraintlayout.widget.ConstraintLayout>